2023-05-30: [BUGFIX] Added missing TheCannon dependencies.
Changelog:
- Added matplotlib and scipy to dependencies
- Added harpspec.egg-info to .gitignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ classifiers = [
 ]
 dependencies = [
     "astropy",
+    "matplotlib"
     "numpy",
+    "scipy",
     "TheCannon",
     "tqdm"
 ]
