--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 dependencies = [
     "astropy",
-    "matplotlib"
+    "matplotlib",
     "numpy",
     "scipy",
     "TheCannon",
